# pastebin

./: Cargo.toml  README.md
src/: main.rs  paste_id.rs
static/js/: highlight.pack.js  richman.js
static/styles/: richman.css
templates/: id.html.hbs  index.html.hbs
