[package]
name = "rocket-pastebin"
version = "0.1.0"
authors = ["attenuation"]
edition = "2018"

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket_static_fs = "0.5.1"

[dependencies.rocket_contrib]
version = "0.3.16"
default-features = false
features = ["handlebars_templates", "tera_templates"]